# lidarsim

./: CMakeLists.txt  README.md
examples/: basic.c
examples/meshes/: scirocco.stl
include/: lidarsim.h
